# content-bulk.online.scrapy

./: .gitignore  TODO.rm  api_run.py  gunicorn.config.py  main.py  pyproject.toml  requirements.txt  scrapy_run.py  some.html  some.txt  some_test.json  wsgi.py  zen api  zen_api.json  zen_api.txt  zen_example.html
deploy/: Dockerfile  docker-compose.yml  initi_mongodb.txt  requirements.txt
docker/: Dockerfile  docker-compose.yml  scrapyd.conf  sources.list
src/: quotes -gustoi-i-navaristyi-sup-mashhurda-dlia-vkusnogo-obeda-6160a9c838058f32816d0f7e.html  quotes -profitroli-s-tvorojnym-kremom-legkii-desert-ponravitsia-ne-tolko-detiam-no-i-vzroslym-615f51b631f18d0e59891fe3.html  scrapy.cfg  zen_article.jl
src/db_services/: db_services.py  models.py
src/default/: contracts.py  css_handler.py  db.py  db_dupefilter.py  db_services.py  items.py  loaders.py  middlewares.py  models.py  mongo_services.py  mongo_valid_articles_scheme.json  pipelines.py  re_handler.py  settings.py
src/flask_app/: app.py  config.py  resources.py
src/rest_api/: app.py  config.py  db.py  db_services.py  resources.py  test.py
src/scrapy_app/: crawl_script.py  db.py  pipelines.py  re_handler.py  settings.py
src/services/: db_services.py  models.py  query_set_converter.py
src/tests/: conftest.py
static/: index.html
static/js/: index.js
tests/: conftest.py  pytest.ini  test_css_handler.py  test_mongodb.py  test_zen_spider.py
tests/flask_app/: test_aggregation_resource.py  test_bulk_resource.py
tests/migrations/: check_documents.py
tests/scrapy/: test_re_handler.py
(+27 files in other folders)
