[tool.poetry]
name = "content-bulk.online.scrapy"
version = "0.1.0"
description = ""
authors = ["bulkinegra <v.valentinvolkovwr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"
scrapy-selenium = "^0.0.7"
scrapy-splash = "^0.8.0"
pymongo = "^3.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
