[tool.poetry]
name = "content-bulk.online.scrapy"
version = "0.1.0"
description = ""
authors = ["bulkinegra <v.valentinvolkovwr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"
pymongo = "^3.12.1"
mongoengine = "^0.23.1"
scrapy-fake-useragent = "^1.4.4"
scrapyd-client = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
scrapyd = "^1.2.1"
pytest-mongodb = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
